@@ -1,3 +1,7 @@
+2018-04-12  Charlie Zender  <zender@uci.edu>
+
+	* Improve English usage in ncrename HINT
+
 2018-04-06  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.7.5-alpha01 release procedure:
